--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HERO World Cup 2022</title>
+    <!-- styles added -->
+    <link rel="stylesheet" href="styles\style.css">
   </head>
   <body>
-    <h1>Test</h1>
+
+    <!------------------------------
+------------ Banner Part--------------
+------------------------------------>
+  <div class="banner">
+    <div class="heading">
+      <h1 class="headline white-texts">The Greatest show on the earth</h1>
+      <p class="white-texts">Contrary to popular belief, Lorem Ipsum is not simply 
+        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        <button class="watch-button white-texts">Watch Now ></button>
+    </div>
+    <div class="banner-image">
+      <img src="assets/Banner Image.png" alt=""></img>
+    </div>
+  </div>
   </body>
 </html>
