--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
     <!------------------------------
 ------------ Banner Part--------------
 ------------------------------------>
-  <div class="banner">
+  <section class="banner">
     <div class="heading">
-      <h1 class="headline white-texts">The Greatest show on the earth</h1>
+      <h1 class="headline white-texts">The Greatest Show on the Earth</h1>
       <p class="white-texts">Contrary to popular belief, Lorem Ipsum is not simply 
         random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-        <button class="watch-button white-texts">Watch Now ></button>
+        <a href="#" class="btn white-texts"> Watch Now > </a>
     </div>
     <div class="banner-image">
       <img src="assets/Banner Image.png" alt=""></img>
     </div>
-  </div>
+  </section>
+  
   </body>
 </html>
