main body and footer added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>HERO World Cup 2022</title>
     <!-- styles added -->
     <link rel="stylesheet" href="styles\style.css">
+    <!-- --------fonts--------- -->
+    <script src="https://kit.fontawesome.com/70eb1bbe12.js" crossorigin="anonymous"></script>
+    <!-- -----------------------------------------------
+    ----------------------------------------------------- -->
   </head>
   <body>
 
@@ -18,12 +22,142 @@
       <h1 class="headline white-texts">The Greatest Show on the Earth</h1>
       <p class="white-texts">Contrary to popular belief, Lorem Ipsum is not simply 
         random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-        <a href="#" class="btn white-texts"> Watch Now > </a>
+        <a href="#" class="btn white-texts"> Watch Now  &nbsp <i class="fa-solid fa-play"></i> </a>
     </div>
     <div class="banner-image">
       <img src="assets/Banner Image.png" alt=""></img>
     </div>
   </section>
-  
+  <!--------------------------------
+  ------------body-section----------
+  --------------------------------->
+  <section class="main-body">
+    <div class="side-nav">
+      <a href="#" class="nav-1 topics">Upcoming Match</a>
+      <a href="#" class="nav-2 topics">All Group</a>
+      <a href="#" class="nav-3 topics">Blog</a>
+    </div>
+    <div class="blogs">
+      <div class="blog-info">
+      <img src="assets/Blog Image.png" alt="">
+      <div>
+        <button>Transfer</button></div>
+      <div>
+        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
+      </div>
+      </div>
+      <div class="blog-info">
+      <img src="assets/Blog Image.png" alt="">
+      <div>
+        <button>Transfer</button></div>
+      <div>
+        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
+      </div>
+      </div>
+      <div class="blog-info">
+      <img src="assets/Blog Image.png" alt="">
+      <div>
+        <button>Transfer</button></div>
+      <div>
+        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
+      </div>
+      </div>
+      <div class="blog-info">
+      <img src="assets/Blog Image.png" alt="">
+      <div>
+        <button>Transfer</button></div>
+      <div>
+        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
+      </div>
+      </div>
+      <div class="blog-info">
+      <img src="assets/Blog Image.png" alt="">
+      <div>
+        <button>Transfer</button></div>
+      <div>
+        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
+      </div>
+      </div>
+      <div class="blog-info">
+      <img src="assets/Blog Image.png" alt="">
+      <div>
+        <button>Transfer</button></div>
+      <div>
+        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
+      </div>
+      </div>
+      <div class="blog-info">
+      <img src="assets/Blog Image.png" alt="">
+      <div>
+        <button>Transfer</button></div>
+      <div>
+        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
+      </div>
+      </div>
+      <div class="blog-info">
+      <img src="assets/Blog Image.png" alt="">
+      <div>
+        <button>Transfer</button></div>
+      <div>
+        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
+      </div>
+      </div>
+      <div class="blog-info">
+      <img src="assets/Blog Image.png" alt="">
+      <div>
+        <button>Transfer</button></div>
+      <div>
+        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
+      </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+      <div class="footer">
+        <h2>Hero World Cup-2022</h2>
+        <div class="social">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <hr>
+        <div class="links">
+        <a href="#">Contact Us</a>
+        <a href="#">Terms of Service</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Privacy Settings</a>
+        <a href="#">Hero App</a>
+        <a href="#">Hero Live</a>
+        </div>
+      </div>
+  </footer>
   </body>
 </html>
