--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
 
-    <!------------------------------
------------- Banner Part--------------
------------------------------------->
+                  <!------------------------------
+              ------------ Banner Part--------------
+              ------------------------------------>
   <section class="banner">
     <div class="heading">
       <h1 class="headline white-texts">The Greatest Show on the Earth</h1>
@@ -28,10 +28,10 @@
       <img src="assets/Banner Image.png" alt=""></img>
     </div>
   </section>
-  <!--------------------------------
-  ------------body-section----------
-  --------------------------------->
-  <section class="main-body">
+                  <!--------------------------------
+                  ------------body-section----------
+                  --------------------------------->
+    <section class="main-body">
     <div class="side-nav">
       <a href="#" class="nav-1 topics">Upcoming Match</a>
       <a href="#" class="nav-2 topics">All Group</a>
@@ -137,8 +137,13 @@
         <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
       </div>
       </div>
+      <!-- Button for tablet mode only -->
+      <a href="#" class="btn white-texts">View All</a>
     </div>
   </section>
+          <!-- --------------------------------
+            -------------footer-------------
+            --------------------------------- -->
   <footer>
       <div class="footer">
         <h2>Hero World Cup-2022</h2>
