--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HERO World Cup 2022</title>
     <!-- styles added -->
-    <link rel="stylesheet" href="styles\style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <!-- --------fonts--------- -->
     <script src="https://kit.fontawesome.com/70eb1bbe12.js" crossorigin="anonymous"></script>
     <!-- -----------------------------------------------
@@ -20,8 +21,7 @@
   <section class="banner">
     <div class="heading">
       <h1 class="headline white-texts">The Greatest Show on the Earth</h1>
-      <p class="white-texts">Contrary to popular belief, Lorem Ipsum is not simply 
-        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+      <p class="white-texts">HERO WORLD CUP is ready to welcome you for the FIFA World Cup™. Get your Qatar 2022™ tickets, accommodation and digital Hayya Card now.</p>
         <a href="#" class="btn white-texts"> Watch Now  &nbsp <i class="fa-solid fa-play"></i> </a>
     </div>
     <div class="banner-image">
@@ -147,12 +147,6 @@
   <footer>
       <div class="footer">
         <h2>Hero World Cup-2022</h2>
-        <div class="social">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        </div>
         <hr>
         <div class="links">
         <a href="#">Contact Us</a>
@@ -161,6 +155,12 @@
         <a href="#">Privacy Settings</a>
         <a href="#">Hero App</a>
         <a href="#">Hero Live</a>
+        </div>
+        <div class="social">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
       </div>
   </footer>
