all pages commit

--- a/index.html
+++ b/index.html
@@ -1,168 +1,288 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HERO World Cup 2022</title>
-    <!-- styles added -->
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/responsive.css">
-    <!-- --------fonts--------- -->
-    <script src="https://kit.fontawesome.com/70eb1bbe12.js" crossorigin="anonymous"></script>
-    <!-- -----------------------------------------------
-    ----------------------------------------------------- -->
-  </head>
-  <body>
 
-                  <!------------------------------
-              ------------ Banner Part--------------
-              ------------------------------------>
-  <section class="banner">
-    <div class="heading">
-      <h1 class="headline white-texts">The Greatest Show on the Earth</h1>
-      <p class="white-texts">HERO WORLD CUP is ready to welcome you for the FIFA World Cup™. Get your Qatar 2022™ tickets, accommodation and digital Hayya Card now.</p>
-        <a href="#" class="btn white-texts"> Watch Now  &nbsp <i class="fa-solid fa-play"></i> </a>
-    </div>
-    <div class="banner-image">
-      <img src="assets/Banner Image.png" alt=""></img>
-    </div>
-  </section>
-                  <!--------------------------------
-                  ------------body-section----------
-                  --------------------------------->
-    <section class="main-body">
-    <div class="side-nav">
-      <a href="#" class="nav-1 topics">Upcoming Match</a>
-      <a href="#" class="nav-2 topics">All Group</a>
-      <a href="#" class="nav-3 topics">Blog</a>
-    </div>
-    <div class="blogs">
-      <div class="blog-info">
-      <img src="assets/Blog Image.png" alt="">
-      <div>
-        <button>Transfer</button></div>
-      <div>
-        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
-      </div>
-      </div>
-      <div class="blog-info">
-      <img src="assets/Blog Image.png" alt="">
-      <div>
-        <button>Transfer</button></div>
-      <div>
-        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
-      </div>
-      </div>
-      <div class="blog-info">
-      <img src="assets/Blog Image.png" alt="">
-      <div>
-        <button>Transfer</button></div>
-      <div>
-        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
-      </div>
-      </div>
-      <div class="blog-info">
-      <img src="assets/Blog Image.png" alt="">
-      <div>
-        <button>Transfer</button></div>
-      <div>
-        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
-      </div>
-      </div>
-      <div class="blog-info">
-      <img src="assets/Blog Image.png" alt="">
-      <div>
-        <button>Transfer</button></div>
-      <div>
-        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
-      </div>
-      </div>
-      <div class="blog-info">
-      <img src="assets/Blog Image.png" alt="">
-      <div>
-        <button>Transfer</button></div>
-      <div>
-        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
-      </div>
-      </div>
-      <div class="blog-info">
-      <img src="assets/Blog Image.png" alt="">
-      <div>
-        <button>Transfer</button></div>
-      <div>
-        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
-      </div>
-      </div>
-      <div class="blog-info">
-      <img src="assets/Blog Image.png" alt="">
-      <div>
-        <button>Transfer</button></div>
-      <div>
-        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
-      </div>
-      </div>
-      <div class="blog-info">
-      <img src="assets/Blog Image.png" alt="">
-      <div>
-        <button>Transfer</button></div>
-      <div>
-        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-clock"></i> 10h &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-comment-dots"></i> 23 </span>
-      </div>
-      </div>
-      <!-- Button for tablet mode only -->
-      <a href="#" class="btn white-texts">View All</a>
-    </div>
-  </section>
-          <!-- --------------------------------
-            -------------footer-------------
-            --------------------------------- -->
-  <footer>
-      <div class="footer">
-        <h2>Hero World Cup-2022</h2>
-        <hr>
-        <div class="links">
-        <a href="#">Contact Us</a>
-        <a href="#">Terms of Service</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Privacy Settings</a>
-        <a href="#">Hero App</a>
-        <a href="#">Hero Live</a>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FIFA-2022 | Goal.Com</title>
+    <!-------Fav Icon Link ---------------------->
+    <link rel="icon" type="image/x-icon" href="./images/fav.png">
+
+    <!-------Font Awesome Link ---------------------->
+    <script src="https://kit.fontawesome.com/70eb1bbe12.js" crossorigin="anonymous"></script>
+
+
+    <!-------Custom CSS Link ---------------------->
+    <link rel="stylesheet" href="styles/style.css">
+
+
+    <!-------Responsive CSS Link ---------------------->
+    <link rel="stylesheet" href="styles/responsive.css">
+
+
+</head>
+
+<body>
+
+    <!-------Main Section Start ---------------------->
+    <Main>
+        <!-------goal Section Start ---------------------->
+        <section class="goal-section">
+            <div class="goal">
+                <div class="goal-text">
+                    <h1>FIFA World Cup <br> Qatar 2022™, Official Partner</h1>
+                    <p>Qatar is ready to welcome you for the FIFA World Cup™ in the Arab world. Get your Qatar 2022™
+                        tickets, accommodation and digital Hayya Card now.</p>
+                    <a href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+                </div>
+                <div class="goal-img">
+                    <img src="./images/Banner Image.png" alt="">
+                </div>
+
+            </div>
+
+        </section>
+        <!-------goal Section End ---------------------->
+
+        <!-------Button & Layout Section Start ---------------------->
+        <section class="button-layout-section">
+            <div class="button-layout">
+                <div class="button">
+                    <div class="button-1">
+                        <a href="./assets/match.html">Upcoming Match</a>
+                    </div>
+                    <div class="button-2">
+                        <a href="./assets/breakingnews.html">Breaking News</a>
+                    </div>
+                    <div class="button-3">
+                        <a href="index.html">Blog</a>
+                    </div>
+                </div>
+                <div id="layout" class="layout">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/Blog Image.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <a class="transfer" href="">Transfer</a>
+                            <p class="description">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="card-info">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock color"></i>
+                                    <span class="number">10h</span>
+                                </div>
+                                <div class="comment">
+                                    <i class="fa-regular fa-message color"></i>
+                                    <span class="number">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/Blog Image.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <a class="transfer" href="">Transfer</a>
+                            <p class="description">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="card-info">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock color"></i>
+                                    <span class="number">10h</span>
+                                </div>
+                                <div class="comment">
+                                    <i class="fa-regular fa-message color"></i>
+                                    <span class="number">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/Blog Image.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <a class="transfer" href="">Transfer</a>
+                            <p class="description">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="card-info">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock color"></i>
+                                    <span class="number">10h</span>
+                                </div>
+                                <div class="comment">
+                                    <i class="fa-regular fa-message color"></i>
+                                    <span class="number">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/Blog Image.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <a class="transfer" href="">Transfer</a>
+                            <p class="description">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="card-info">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock color"></i>
+                                    <span class="number">10h</span>
+                                </div>
+                                <div class="comment">
+                                    <i class="fa-regular fa-message color"></i>
+                                    <span class="number">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/Blog Image.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <a class="transfer" href="">Transfer</a>
+                            <p class="description">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="card-info">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock color"></i>
+                                    <span class="number">10h</span>
+                                </div>
+                                <div class="comment">
+                                    <i class="fa-regular fa-message color"></i>
+                                    <span class="number">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/Blog Image.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <a class="transfer" href="">Transfer</a>
+                            <p class="description">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="card-info">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock color"></i>
+                                    <span class="number">10h</span>
+                                </div>
+                                <div class="comment">
+                                    <i class="fa-regular fa-message color"></i>
+                                    <span class="number">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/Blog Image.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <a class="transfer" href="">Transfer</a>
+                            <p class="description">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="card-info">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock color"></i>
+                                    <span class="number">10h</span>
+                                </div>
+                                <div class="comment">
+                                    <i class="fa-regular fa-message color"></i>
+                                    <span class="number">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/Blog Image.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <a class="transfer" href="">Transfer</a>
+                            <p class="description">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="card-info">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock color"></i>
+                                    <span class="number">10h</span>
+                                </div>
+                                <div class="comment">
+                                    <i class="fa-regular fa-message color"></i>
+                                    <span class="number">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/Blog Image.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <a class="transfer" href="">Transfer</a>
+                            <p class="description">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="card-info">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock color"></i>
+                                    <span class="number">10h</span>
+                                </div>
+                                <div class="comment">
+                                    <i class="fa-regular fa-message color"></i>
+                                    <span class="number">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="view-more">
+                <a href="#">View All</a>
+            </div>
+        </section>
+        <!-------Button & Layout Section End ---------------------->
+    </Main>
+    <!-------Main Section End ---------------------->
+
+    <!-------Footer Section Start ---------------------->
+    <footer>
+        <div class="footer">
+            <div class="footer-text">
+                <h1>Goal.com</h1>
+                <hr>
+            </div>
+
+            <div class="link">
+                <a href="#">Contact Us</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Privacy Settings</a>
+                <a href="#">Goal App</a>
+                <a href="#">Goal Live</a>
+
+            </div>
+            <br> <br>
+            <div class="social-link">
+
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+
+            </div>
+
+
         </div>
-        <div class="social">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-      </div>
-  </footer>
-  </body>
+    </footer>
+
+    <!-------Footer Section End ---------------------->
+
+</body>
+
 </html>
