--- a/assets/match.html
+++ b/assets/match.html
@@ -28,10 +28,7 @@
       <section class="goal-section">
         <div class="goal">
           <div class="goal-text">
-            <h1>
-              FIFA World Cup <br />
-              Qatar 2022™, Official Partner
-            </h1>
+            <h1>The Greatest <br>Show on the <br> Earth</h1>
             <p>
               Qatar is ready to welcome you for the FIFA World Cup™ in the Arab
               world. Get your Qatar 2022™ tickets, accommodation and digital
@@ -40,7 +37,7 @@
             <a href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
           </div>
           <div class="goal-img">
-            <img src="../images/Banner Image.png" alt="" />
+            <img src="../images/banner.png" alt="" />
           </div>
         </div>
       </section>
@@ -147,7 +144,7 @@
     <footer>
       <div class="footer">
         <div class="footer-text">
-          <h1>Goal</h1>
+          <h1>Goal.Com</h1>
           <hr />
         </div>
 
